--- a/amazone-clone/package.json
+++ b/amazone-clone/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage":"https://Hana-Wondie.github.io/Amazone-clone-2025",
   "name": "amazone-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,6 +18,7 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "axios": "^1.13.2",
+    "firebase": "^12.7.0",
     "numeral": "^2.0.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -31,6 +35,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.2.4"
   }
